--- a/templates/dashboard/manager.html
+++ b/templates/dashboard/manager.html
@@ -69,6 +69,7 @@
                         <th>ID</th>
                         <th>DESCRIPTION</th>
                         <th>STATUS</th>
+                        <th>CHECKPOINT</th>
                         <th>EDIT</th>
                         <th>DELETE</th>
                     </tr>
@@ -85,6 +86,17 @@
                             {% endif %}
                         </td>
                         <td>{{ case.get_status_display }}</td>
+                        <td>
+                            {% if case.checkpoint %}
+                                {% if case.checkpoint|length <= 30 %}
+                                    {{ case.checkpoint }}
+                                {% else %}
+                                    {{ case.checkpoint|truncatechars:30 }}...
+                                {% endif %}
+                            {% else %}
+                                N/A
+                            {% endif %}
+                        </td>
                         <td>
                             <a href="{% url 'update' case.pk %}">
                                 <span class="icon">
