--- a/templates/dashboard/employee.html
+++ b/templates/dashboard/employee.html
@@ -12,6 +12,7 @@
                         <th>ID</th>
                         <th>DESCRIPTION</th>
                         <th>STATUS</th>
+                        <th>CHECKPOINT</th>
                         <th>EDIT</th>
                     </tr>
                 </thead>
@@ -27,6 +28,17 @@
                             {% endif %}
                         </td>
                         <td>{{ case.get_status_display }}</td>
+                        <td>
+                            {% if case.checkpoint %}
+                                {% if case.checkpoint|length <= 30 %}
+                                    {{ case.checkpoint }}
+                                {% else %}
+                                    {{ case.checkpoint|truncatechars:30 }}...
+                                {% endif %}
+                            {% else %}
+                                N/A
+                            {% endif %}
+                        </td>
                         <td>
                             <a href="{% url 'edit' case.pk %}">
                                 <span class="icon">
